Fix facebook invite page broken during merge, fix border radius in redlightbox mixin standard, add some format validation(no whitespace) for the email field during registration

--- a/app/stylesheets/_mixins.sass
+++ b/app/stylesheets/_mixins.sass
@@ -7,9 +7,7 @@
 
 @mixin redlightbox
   background-color: #ac322f
-  border-radius 4px
-  -webkit-border-radius: 4px
-  -mox-border-radius: 4px
+  +border-radius(4px)
   padding: 24px
   box-shadow: 0 0 18px 4px #f6fbeb
   -webkit-box-shadow: 0 0 18px 4px #f6fbeb
